# Haskell-From-First-Principles

./: .gitignore  README.md
ch01/: exercises.md
ch02/: hello.hs  learn.hs
ch03/: print1.hs  print2.hs  print3.hs  top.hs
ch04/: mood.hs
ch05/exercises/: arith3broken.hs
ch06/: partial.hs
ch06/exercises/: chapter_exercises.ipynb
ch07/: notes_and_samples.ipynb
ch08/: notes_and_samples.ipynb
ch08/exercises/: chapter_exercises.ipynb
ch09/exercises/: chapter_exercises.ipynb  cipher.hs
ch1/: exercises.md
ch10/: notes_and_samples.ipynb
ch10/exercises/: chapter_exercises.ipynb
ch11/: notes_and_samples.ipynb
ch11/exercises/: chapter_exercises.ipynb  vingere.hs
ch12/: notes_and_samples.ipynb
ch12/exercises/: chapter_exercises.ipynb
ch13/: notes_and_samples.ipynb
ch13/exercises/: Vingere.hs  chapter_exercises.ipynb
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Main.hs
ch13/hello/: hello.cabal
ch14/: notes_and_samples.ipynb
ch15/: MaybeAnotherMonoid.hs  notes_and_samples.ipynb
ch16/: notes_and_samples.ipynb
ch17/: ListApplicative.hs  ValidationApplicative.hs  ZipListApplicative.hs  notes_and_samples.ipynb
ch18/: notes_and_samples.ipynb
ch2/: let_where.hs
ch20/: notes_and_samples.ipynb
ch21/: notes_and_samples.ipynb
ch22/: notes_and_samples.ipynb
ch23/: fizzbuzz.hs  notes_and_samples.ipynb
ch3/: notes_and_samples.ipynb  print1.hs
ch4/: notes_and_samples.ipynb
ch5/: notes_and_samples.ipynb  typeInference1.hs
ch6/: notes_and_samples.ipynb
ch7/: notes_and_samples.ipynb
ch9/: notes_and_samples.ipynb
(+46 files in other folders)
