cabal-version:       2.2

name:                hangman
version:             0.1.0.0
synopsis:            Hangman game
description:         A simple hangman game
homepage:            https://github.com/kamalfarahani/Haskell-From-First-Principles/tree/main/ch13/hangman
license:             BSD-3-Clause
license-file:        LICENSE
author:              Kamal Farahani
maintainer:          kamal.farahani90@gmail.com
copyright:           2024 Kamal Farahani
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
                     data/dict
cabal-version:       >= 1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random, split
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
